# sdl_jam

./: CMakeLists.txt  README.md
include/game/: g_helper.h  g_map_types.h  g_scenes.h
include/hf/: hf_dir.h  hf_scene.h  hf_vec2.h
src/: CMakeLists.txt  main.c
src/game/: SourceFile  g_helper.c  g_scene_editor.c  g_scene_game.c  g_scene_menu.c
src/hf/: CMakeLists.txt  SourceFile  hf_dir.c  hf_scene.c  hf_vec2.c
